--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "atom": ">=1.21.0"
   },
   "dependencies": {
-    "atom-languageclient": "0.8.1",
-    "atom-package-deps": "^4.6.0"
+    "atom-languageclient": "git+https://github.com/atom-ide-community/atom-languageclient.git#v1.0.0",
+    "atom-package-deps": "^7.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
