--- a/package.json
+++ b/package.json
@@ -23,17 +23,16 @@
     "atom": ">=1.21.0"
   },
   "dependencies": {
-    "atom-languageclient": "git+https://github.com/atom-ide-community/atom-languageclient.git#v1.0.0",
-    "atom-package-deps": "^7.0.2"
+    "atom-languageclient": "git+https://github.com/atom-ide-community/atom-languageclient.git#v1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.2.0",
     "husky": "^4.3.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "standard-version": "^9.0.0"
   },
   "husky": {
