--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "atom": ">=1.21.0"
   },
   "dependencies": {
-    "atom-languageclient": "^1.0.5"
+    "atom-languageclient": "^1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "husky": "^4.3.6",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "prettier-package-json": "^2.1.3",
+    "scrivano": "^0.1.0",
     "standard-version": "^9.1.0"
   },
   "husky": {
